Fixes #131